clusters/may-chang/passbolt/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: passbolt
  namespace: passbolt
  labels:
    app: passbolt
    component: service
spec:
  type: ClusterIP
  selector:
    app: passbolt
    component: deployment
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
